--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ django-debug-toolbar==1.3.2
 #sudo apt-get install python-pip python-dev libpq-dev postgresql postgresql-contrib
 # sudo /home/sazid/.virtualenvsohmgear/bin/pip install psycopg2 
 psycopg2==2.6.1 
+django-pgjson==0.3.1
