--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
-django==1.8
-djangorestframework==3.1
-markdown==2.6.2
-django-filter==0.10.0
-django-debug-toolbar==1.3.2
-
-# sudo apt-get install pgadmin3 for GUI and time of migration run first migrate auth python manage.py migrate auth then python manage.py syncdb
-#sudo apt-get install python-pip python-dev libpq-dev postgresql postgresql-contrib
-# sudo /home/sazid/.virtualenvsohmgear/bin/pip install psycopg2 
-psycopg2==2.6.1 
-django-pgjson==0.3.1
-django-celery==3.1.16
+Django==1.8
+Markdown==2.6.2
+MySQL-python==1.2.5
+amqp==1.4.6
+anyjson==0.3.3
+argparse==1.2.1
+billiard==3.3.0.20
 celery==3.1.18
+django-celery==3.1.16
+django-debug-toolbar==1.3.2
+django-evolution==0.7.5
+django-filter==0.10.0
+django-pgjson==0.3.1
+djangorestframework==3.1.0
+gunicorn==19.3.0
+kombu==3.0.26
+psycopg2==2.6.1
+pytz==2015.4
 redis==2.10.3
+requests==2.7.0
+sqlparse==0.1.16
+wsgiref==0.1.2
