--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,18 @@ billiard==3.3.0.20
 celery==3.1.18
 django-celery==3.1.16
 django-debug-toolbar==1.3.2
+django-evolution==0.7.5
 django-filter==0.10.0
 django-pgjson==0.3.1
 djangorestframework==3.1.0
+functools32==3.2.3-2
 gunicorn==19.3.0
+jsonschema==2.5.1
 kombu==3.0.26
 psycopg2==2.6.1
 pytz==2015.4
+redis==2.10.3
 requests==2.7.0
 sqlparse==0.1.16
+validictory==1.0.1
 wsgiref==0.1.2
-jsonschema==2.5.1
