--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,43 @@
 Django==1.8
 Markdown==2.6.2
-#MySQL-python==1.2.5
+MySQL-python==1.2.5
 Pillow==3.0.0
 amqp==1.4.6
 anyjson==0.3.3
 argparse==1.2.1
+awscli==1.10.11
 billiard==3.3.0.20
+boto3==1.2.6
+botocore==1.4.2
 celery==3.1.18
+colorama==0.3.3
+django-admin-bootstrapped==2.5.7
 django-celery==3.1.16
+django-ckeditor==5.0.2
 django-debug-toolbar==1.3.2
+django-evolution==0.7.5
 django-filter==0.10.0
 django-jet==0.1.1
 django-pgjson==0.3.1
+django-simple-history==1.6.3
 djangorestframework==3.1.0
+docutils==0.12
 functools32==3.2.3-2
+futures==3.0.5
 gunicorn==19.3.0
+jmespath==0.9.0
 jsonschema==2.5.1
 kombu==3.0.26
 psycopg2==2.6.1
+pyasn1==0.1.9
+python-dateutil==2.5.0
 pytz==2015.4
 redis==2.10.3
 requests==2.7.0
+rsa==3.3
+s3transfer==0.0.1
+simplejson==3.8.1
+six==1.10.0
 sqlparse==0.1.16
 validictory==1.0.1
 wsgiref==0.1.2
-django-simple-history==1.6.3
-django-admin-bootstrapped==2.5.7
-django-ckeditor==5.0.2
